<resources>
    <string name="app_name">CALL OF DUTY COMPANION</string>
    <string name="contact_title">Contact Us</string>
    <string name="return_title">Return To App</string>
    <string name="field_email_label">Email</string>
    <string name="field_password_label">Password</string>
    <string name="news_title">NEWS</string>
    <string name="cdl_title">CDL</string>
    <string name="stats_title">STATS</string>
    <string name="community_title">COMMUNITY</string>
    <string name="login_title">Login</string>
    <string name="login_title_mayus">LOGIN</string>
    <string name="field_verify_password_label">Verify Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="back_to_login_button">Return To Login</string>
    <string name="end_register_button">Finish Register</string>
    <string name="unknow_user">Unknown User</string>
    <string name="user_login_message">User %s u are logged</string>
    <string name="login_error">Login Error</string>
    <string name="chat_messages_hint">Message\n</string>
    <string name="profile_title">Profile\n</string>
    <string name="chat_upload_image_error">UploadImageError\n</string>
    <string name="emailContact">contact@activision.com</string>
    <string name="default_push_channel_name">Generic Pushes</string>
</resources>