<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_bar_button"
            android:icon="@drawable/news_icon"
            android:title="@string/news_title"
            />
        <item
            android:id="@+id/community_button_bar_button"
            android:icon="@drawable/community_icon"
            android:title="@string/community_title"
            />
        <item
            android:id="@+id/stats_button_bar_button"
            android:icon="@drawable/controller_icon"
            android:title="@string/stats_title"
            />
        <item
            android:id="@+id/cdl_button_bar_button"
            android:icon="@drawable/cdl_icon"
            android:title="@string/cdl_title"
            />

    </group>
</menu>